# satellite-object-detection

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 01_data_exploration.ipynb
src/: main.py
src/data_processing/: convert_annotations.py  convert_filenames.py  convert_image_format.py
